--- a/package.json
+++ b/package.json
@@ -1,19 +1,11 @@
 {
-  "name": "ai-chatbot-starter",
+  "name": "ai-chatbot-advanced-starter",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "format": "prettier --write .",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
-  },
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
     "@tabler/icons-react": "^2.9.0",
+    "admin-check": "^1.1.3",
     "eventsource-parser": "^0.1.0",
     "i18next": "^22.4.13",
     "next": "13.2.4",
@@ -47,5 +39,14 @@
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
     "vitest": "^0.29.7"
+  }, 
+  "scripts": {
+    "build": "next build && nodeenv",
+    "start": "next start || nodeenv",
+	"dev": "next dev || nodeenv",
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   }
 }
